--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
 </head>
 <body>
     <div id="main">
-        <div id="page"></div>
+        <div id="page1">
+            <nav>
+           <img src="https://assets-global.website-files.com/64d3dd9edfb41666c35b15b7/64d3dd9edfb41666c35b15c2_Sundown%20logo.svg">
+           <div id="nav-part2">
+            <h4>Work</h4>
+            <h4>Studio</h4>
+            <h4>Contact</h4>
+           </div>
+
+            </nav>
+        </div>
     </div>
 </body>
 <script src="script.js"></script>
