--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sundown Studio</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -23,9 +24,15 @@
                 THAT<br>
                 INSPIRE</h1></div>
           </div>
+          <div id="hero-shape">
+            <div id="hero1"></div>
+            <div id="hero2"></div>
+            <div id="hero3"></div>
+          </div>
           <video autoplay loop muted src="https://player.vimeo.com/progressive_redirect/playback/915350257/rendition/1080p/file.mp4?loc=external&amp;signature=768f26c5396775e76c340cb808a897a724e78acb8231106dd94af9d732695176"></video>
         </div>
     </div>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
 <script src="script.js"></script>
 </html>
