--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sundown Studio</title>
+    <link rel="shortcut icon" href="./icon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -29,10 +30,48 @@
             <div id="hero2"></div>
             <div id="hero3"></div>
           </div>
-          <video autoplay loop muted src="https://player.vimeo.com/progressive_redirect/playback/915350257/rendition/1080p/file.mp4?loc=external&amp;signature=768f26c5396775e76c340cb808a897a724e78acb8231106dd94af9d732695176"></video>
+          <video autoplay loop muted src="./video.mp4"></video>
+        </div>
+        <div id="page2">
+            <div id="moving-text">
+                <div class="con">  
+                    <h1>EXPERIENCES</h1>
+                    <div id="gola"></div>
+                    <h1>CONTENT</h1>
+                    <div id="gola"></div>
+                    <h1>ENVIRONMENTS</h1>
+                    <div id="gola"></div></div>
+                    <div class="con">  
+                        <h1>EXPERIENCES</h1>
+                        <div id="gola"></div>
+                        <h1>CONTENT</h1>
+                        <div id="gola"></div>
+                        <h1>ENVIRONMENTS</h1>
+                        <div id="gola"></div></div>
+                        <div class="con">  
+                            <h1>EXPERIENCES</h1>
+                            <div id="gola"></div>
+                            <h1>CONTENT</h1>
+                            <div id="gola"></div>
+                            <h1>ENVIRONMENTS</h1>
+                            <div id="gola"></div></div>
+            </div>
+            <div id="page2-bottom">
+                <h1>We are a group of design- <br> driven, goal-focused creators,<br>  producers, and designers <br> who
+                    believe that the details <br>  make all the difference.</h1>
+                <div id="bottom-part2">
+                    <img src="https://uploads-ssl.webflow.com/64d3dd9edfb41666c35b15b7/64d3dd9edfb41666c35b15d1_Holding_thumb-p-500.jpg"
+                        alt="">
+                    <p>We love to create, we love to solve, we love to collaborate, and we love to turn amazing ideas
+                        into reality. We’re here to partner with you through every step of the process and know that
+                        relationships are the most important things we build.</p>
+                </div>
+            </div>
         </div>
     </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js" integrity="sha512-onMTRKJBKz8M1TnqqDuGBlowlH0ohFzMXYRNebz+yOcc5TQr/zAKsthzhuv0hiyUKEiQEQXEynnXCvNTOk50dg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="script.js"></script>
 </html>
