--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="fixed-image">
+
+    </div>
     <div id="main">
         <div id="page1">
             <nav>
@@ -73,6 +76,7 @@
            </div>
         </div>
         <div id="page3">
+            <div id="elem-container">
             <div id="elem1" class="elem" data-image="https://images.unsplash.com/photo-1701001308648-7b731a52b8d7?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxNHx8fGVufDB8fHx8fA%3D%3D">
                 <div class="overlay"></div>
                 <h2>Makers Studio HOI</h2>
@@ -101,8 +105,44 @@
                <div class="overlay"></div>
                 <h2>Play New Kidvision</h2>
             </div>
+            </div>
+        </div>
+
+
+
+        <div id="page4">
+            <div class="swiper mySwiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">Slide 1</div>
+                    <div class="swiper-slide">Slide 2</div>
+                    <div class="swiper-slide">Slide 3</div>
+                    <div class="swiper-slide">Slide 4</div>
+                    <div class="swiper-slide">Slide 5</div>
+                    <div class="swiper-slide">Slide 6</div>
+                    <div class="swiper-slide">Slide 7</div>
+                </div>
+
+            </div>
+        </div>
+        <div id="page5">
+
+        </div>
+        <div id="full-scr">
+            <div id="full-div1">
+                
+            </div>
         </div>
     </div>
+    <div id="footer">
+        <div id="footer-div">
+
+        </div>
+        <h1>Sundown</h1>
+        <div id="footer-bottom">
+
+        </div>
+    </div>
+    
 
 <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
