--- a/test.html
+++ b/test.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="test.css" class="css">
 </head>
 <body>
-  <div id="hero1"></div>  
-  <div id="hero2"></div> 
+  <div id="gooey1"></div>  
+  <div id="gooey2"></div> 
 </body>
 </html>
