--- a/index.html
+++ b/index.html
@@ -118,13 +118,13 @@
          <div id="page4">
             <div class="swiper mySwiper">
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide">Slide 1</div>
-                    <div class="swiper-slide">Slide 2</div>
-                    <div class="swiper-slide">Slide 3</div>
-                    <div class="swiper-slide">Slide 4</div>
-                    <div class="swiper-slide">Slide 5</div>
-                    <div class="swiper-slide">Slide 6</div>
-                    <div class="swiper-slide">Slide 7</div>
+                    <div class="swiper-slide"><p>Retained Production support across retail and events in NY, CHI, LA. Creative Design, Design Management, Production/Project Management, and execution of work from concept to installation across the Country.</p></div>
+                    <div class="swiper-slide"><p>Creative Concepting, Design, Design Management, Project Management, and execution of work from concept to installation across the Country. Cross functional communication and management of third party partners.</p></div>
+                    <div class="swiper-slide"><p>Creative Concepting, 2D &amp;&nbsp;3D Design, Design Management for work in NYC&nbsp;and across the country.</p></div>
+                    <div class="swiper-slide"><p>Production and design along with install oversight and execution support for the SoHo store opening on Broadway St, New York. Also working on creative and production work for a new store opening in Glendale, California.</p></div>
+                    <div class="swiper-slide"><p>Design and Production partner for Hunter Holiday 2022 Pop-in at Nordstrom 57th St, New York, including activations in Women’s, Men’s and Kid’s zones. Thirty-five (35) additional smaller take-downs in Nordstrom stores across the US. Concept design for Holiday boot customization events in stores across winter 2022.</p></div>
+                    <div class="swiper-slide"><p>Creative, Design, and Production Partner for 2023 CES. Scope Included creation of Branding Identity, Assets, and Digital Content, Design, Production design, Production oversight and Installation of client activations for IBM, Delta, Instacart, and more.</p></div>
+                    <div class="swiper-slide"><p>Creative, Design, and Production Partner for 2022 NY Fashion Week Pop-Up space. In Partnership with B-Reel scope including creation of Final Design, Design Assets, 3D Renders, Production design, Production/Partner oversight and creation of a two (2) story pop-up for Afterpay’s clients such as Crocs, JD Sports, Container Store, &amp; Revolve.</p></div>
                 </div>
             </div>
         </div>
@@ -142,11 +142,17 @@
         </div>
     </div>
       <div id="footer">
-        <div id="footer-div">
+       
+        <div id="footer-div"><h4>WORK</h4>
+            <h4>STUDIO</h4>
+            <h4>CONTACT</h4>
           </div>
         <h1>Sundown</h1>
         <div id="footer-bottom">
-
+         <h3>copyright@ Sundown studio</h3>
+         <h3>Designed By Nimisha </h3>
+         <h3>Instagram</h3>
+         <h3>Linkedin</h3>
         </div>
     </div>
     
