--- a/index.html
+++ b/index.html
@@ -143,9 +143,11 @@
     </div>
       <div id="footer">
        
-        <div id="footer-div"><h4>WORK</h4>
-            <h4>STUDIO</h4>
+        <div id="footer-div">
+            <h4>WORK</h4><br>
+            <h4>STUDIO</h4><br>
             <h4>CONTACT</h4>
+            <div id="left"><p class="text-size-large text-color-white">Get industry insights and creative <br> inspiration straight to your inbox.</p></div>
           </div>
         <h1>Sundown</h1>
         <div id="footer-bottom">
