--- a/test1.html
+++ b/test1.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="test.css" class="css">
+    <link rel="stylesheet" href="test1.css" class="">
 </head>
 <body>
-  <div id="gooey1"></div>  
+  <div id="gooey1">kkk</div>  
   <div id="gooey2"></div> 
 </body>
 </html>
